--- a/nova/package.json
+++ b/nova/package.json
@@ -6,13 +6,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "mathjs": "^10.6.1",
     "next": "latest",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-router-dom": "^6.3.0",
+    "semantic-ui-react": "^2.1.3",
     "styled-components": "^5.3.5",
-    "swr": "^1.3.0",
-    "semantic-ui-react": "^2.1.3"
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
